2003-08-12  Shaun McCance  <shaunm@wolfram.com>

	* yelp-functions.xsl:
	- Fixed stupid bad syntax in yelp:get-admon.class

2003-07-31  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	- Fix for the thing where parts got two TOCs.

2003-07-29  Shaun McCance  <shaunm@wolfram.com>

	* yelp-functions.xsl:
	- Abilitity to get title from refmeta/refentrytitle.  Probably
	  a few more things along this line are needed.

2003-07-24  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	- Remove compatibility with old param names.

2003-07-21  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	* yelp-functions.xsl:
	- Fix dumb bug where singleton subsections didn't get processed.

2003-07-21  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	- Revert current to 1.48 until I can investigate more thoroughly.
	- Put in compatibility with old param names until I can get the
	  changes pushed through in C.

2003-07-20  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	- Fix linking problem to toc and title-page introduced
	  in previous commit.

2003-07-20  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	- Remove unused params.
	- Change toc and title-page filenames on file chunking to be
	  the same as the current GDP stylesheets.

2003-07-20  Shaun McCance  <shaunm@wolfram.com>

	* yelp-customization.xsl:
	- Support for chunking to files.
	- Import current nwalsh xsl.  There don't seem to be problems.
	- Changed gdb_ [sic] to yelp_.
	- Removed link color attributes on body.
	- Revert the use-titles-as-prev-next-text change.
	  Do as the GDP xsl does instead.

	* yelp-functions.xsl:
	- Fix a problem in get-prev where a first subsection would point
	  to the last introductory para of its parent.  Links resolved,
	  but titles didn't.
	- Changed gdb_ [sic] to yelp_.

2003-07-15  Shaun McCance  <shaunm@wolfram.com>

	* yelp-functions.xsl: Speed improvement
