@@ -516,6 +516,7 @@
 
 </l:l10n>
 
+
 <!-- ************ Traditional Chinese ******************* -->
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="zh_tw">
   <l:gentext key="Title" text="&#27161;&#38988;"/>  
@@ -558,5 +559,21 @@
    </l:context>
 
 </l:l10n>
+
+<!-- ******************* Serbian ******************* -->
+<l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="sr">
+  <l:gentext key="Title" text="&#1053;&#1072;&#1089;&#1083;&#1086;&#1074;"/>  
+  <l:gentext key="Author" text="&#1040;&#1091;&#1090;&#1086;&#1088;"/>
+  <l:gentext key="Authors" text="&#1040;&#1091;&#1090;&#1086;&#1088;&#1080;"/>
+  <l:gentext key="Affiliation" text="&#1055;&#1086;&#1079;&#1080;&#1094;&#1080;&#1112;&#1072;"/>  
+  <l:gentext key="Email" text="&#1045;&#45;&#1087;&#1086;&#1096;&#1090;&#1072;"/>  
+  <l:gentext key="Publisher" text="&#1048;&#1079;&#1076;&#1072;&#1074;&#1072;&#1095;"/>
+  <l:gentext key="Date" text="&#1044;&#1072;&#1090;&#1091;&#1084;"/>
+  <l:context name="title">
+    <l:template name="bookinfo" text="&#1054;&#32;&#1086;&#1074;&#1086;&#1084;&#32;&#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1091;"/>
+    <l:template name="articleinfo" text="&#1054;&#32;&#1086;&#1074;&#1086;&#1084;&#32;&#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1091;"/>
+  </l:context>
+</l:l10n>
+ 
 
 </i18n>
