@@ -1,3 +1,7 @@
+2003-09-03  Danilo Šegan  <dsegan@gmx.net>
+
+	* l10n.xml: Added Serbian translation.
+
 2003-08-12  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-functions.xsl:
